# veritool

./: README.md  pyproject.toml
artifacts/latest/: demo-bundle.json  run.json  run.md
artifacts/live/: demo-bundle.json  run.json  run.md
artifacts/live/anthropic-claude-sonnet-4/: demo-bundle.json  run.json  run.md  trajectories.json
artifacts/live/deepseek-deepseek-v3-2-exp/: demo-bundle.json  run.json  run.md  trajectories.json
artifacts/live/google-gemini-2-5-pro/: demo-bundle.json  run.json  run.md  trajectories.json
artifacts/live/openai-gpt-4o/: demo-bundle.json  run.json  run.md  trajectories.json
demo-site/: README.md  all-models.json  graph-background.js  index.html  leaderboard.html  leaderboard.js  live-trajectories.json  styles.css  trajectories.html  trajectories.js
docs/: report-draft.md  results.md
replays/append_only_logger/: 1.py  2.py
replays/bounded_sql_querier/: 1.py  2.py
replays/compute_bounded_evaluator/: 1.py  2.py
replays/local_context_reader/: 1.py  2.py
replays/pii_masker/: 1.py  2.py
replays/safe_api_caller/: 1.py  2.py
scripts/: build_live_trajectory_bundle.py  build_multi_model_site_data.py  run_live_suite.py  run_replay_suite.py
src/veritool/: __init__.py  cli.py  demo_bundle.py  llm.py  models.py  reporting.py  runtime.py  tools.py  trajectory_bundle.py
tests/: test_replay_suite.py
