[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritool"
version = "0.1.0"
description = "CEGIS-style synthesis and verification for constrained agent tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "certifi>=2026.5.20",
  "z3-solver>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
veritool = "veritool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
